@@ -2,164 +2,174 @@ package com.github.backend.utils;
 
 import org.json.JSONArray;
 import org.json.JSONObject;
-import org.springframework.http.*;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+import org.springframework.http.client.reactive.ReactorClientHttpConnector;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.util.UriComponentsBuilder;
+import reactor.netty.http.client.HttpClient;
+import io.netty.handler.ssl.SslContext;
+import io.netty.handler.ssl.SslContextBuilder;
+import io.netty.handler.ssl.util.InsecureTrustManagerFactory;
 
-import javax.net.ssl.HttpsURLConnection;
-import javax.net.ssl.SSLContext;
-import javax.net.ssl.TrustManager;
-import javax.net.ssl.X509TrustManager;
-import java.security.KeyManagementException;
-import java.security.NoSuchAlgorithmException;
-import java.security.cert.X509Certificate;
 import java.util.Map;
+import java.util.Objects;
 
 /**
- * Https 请求封装类
- * 目前支持:
- * 1、get 请求
- * 2、Post 请求, 请求体支持 Json、Form-data 格式
+ * HTTPS 请求工具类（智能类型推断版）
+ * 特性：
+ * 1. 所有方法自动判断返回 JSONObject/JSONArray/String
+ * 2. 统一的泛型返回类型 <T>
+ * 3. 保持原有 SSL 忽略功能
+ * 4. 线程安全的静态工具类
  */
+public final class Https {
 
-public class Https {
-
-    private static final RestTemplate restTemplate;
+    private static final WebClient WEB_CLIENT;
 
     static {
-        // 初始化 RestTemplate
-        restTemplate = new RestTemplate();
+        WEB_CLIENT = WebClient.builder()
+                .clientConnector(new ReactorClientHttpConnector(
+                        HttpClient.create()
+                                .secure(spec -> spec.sslContext(configureUnsafeSslContext()))
+                ))
+                .build();
+    }
 
-        // 配置 SSL 忽略证书验证（仅用于测试环境）
-        try {
-            SSLContext sslContext = SSLContext.getInstance("TLS");
-            sslContext.init(null, new TrustManager[]{new X509TrustManager() {
-                public void checkClientTrusted(X509Certificate[] chain, String authType) {}
-                public void checkServerTrusted(X509Certificate[] chain, String authType) {}
-                public X509Certificate[] getAcceptedIssuers() { return new X509Certificate[0]; }
-            }}, new java.security.SecureRandom());
-            HttpsURLConnection.setDefaultSSLSocketFactory(sslContext.getSocketFactory());
-            HttpsURLConnection.setDefaultHostnameVerifier((hostname, session) -> true);
-        } catch (NoSuchAlgorithmException | KeyManagementException e) {
-            throw new RuntimeException("Failed to configure SSL", e);
-        }
+    private Https() {
+        throw new UnsupportedOperationException("工具类不允许实例化");
+    }
+
+    // ================ 公开方法 ================
+
+    /**
+     * 智能 GET 请求（自动判断返回类型）
+     * @param url     请求地址
+     * @param params  查询参数
+     * @param headers 请求头
+     * @return 自动解析的 JSONObject/JSONArray/String
+     * @param <T> 自动推断的返回类型
+     */
+    @SuppressWarnings("unchecked")
+    public static <T> T get(String url,
+                            Map<String, String> params,
+                            HttpHeaders headers) {
+        String response = executeRequest(
+                WEB_CLIENT.get()
+                        .uri(buildUri(url, params))
+                        .headers(h -> addHeadersIfPresent(h, headers))
+        );
+        return (T) parseResponse(response);
     }
 
     /**
-     * 发送 GET 请求，返回 JSON 数据
-     *
-     * @param url    请求 URL
-     * @param params 请求参数（可选）
-     * @param headers 请求头（可选）
-     * @return JSON 格式的响应数据
+     * 智能 POST JSON 请求
+     * @param url     请求地址
+     * @param body    JSON 请求体
+     * @param headers 请求头
+     * @return 自动解析的响应
+     * @param <T> 自动推断的返回类型
      */
-    public static JSONObject get(String url, Map<String, String> params, HttpHeaders headers) {
-        // 构建 URL 和查询参数
+    @SuppressWarnings("unchecked")
+    public static <T> T post(String url,
+                                 JSONObject body,
+                                 HttpHeaders headers) {
+        HttpHeaders finalHeaders = initializeHeaders(headers);
+        finalHeaders.setContentType(MediaType.APPLICATION_JSON);
+
+        String response = executeRequest(
+                WEB_CLIENT.post()
+                        .uri(url)
+                        .headers(h -> h.addAll(finalHeaders))
+                        .bodyValue(body.toString())
+        );
+        return (T) parseResponse(response);
+    }
+
+    /**
+     * 智能 POST Form 请求
+     * @param url      请求地址
+     * @param formData 表单数据
+     * @param headers  请求头
+     * @return 自动解析的响应
+     * @param <T> 自动推断的返回类型
+     */
+    @SuppressWarnings("unchecked")
+    public static <T> T post(String url,
+                                 Map<String, String> formData,
+                                 HttpHeaders headers) {
+        MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
+        formData.forEach(body::add);
+
+        HttpHeaders finalHeaders = initializeHeaders(headers);
+        finalHeaders.setContentType(MediaType.MULTIPART_FORM_DATA);
+
+        String response = executeRequest(
+                WEB_CLIENT.post()
+                        .uri(url)
+                        .headers(h -> h.addAll(finalHeaders))
+                        .bodyValue(body)
+        );
+        return (T) parseResponse(response);
+    }
+
+    // ================ 私有工具方法 ================
+
+    private static SslContext configureUnsafeSslContext() {
+        try {
+            return SslContextBuilder.forClient()
+                    .trustManager(InsecureTrustManagerFactory.INSTANCE)
+                    .build();
+        } catch (Exception e) {
+            throw new IllegalStateException("SSL 配置失败", e);
+        }
+    }
+
+    private static String buildUri(String url, Map<String, String> params) {
+        validateUrl(url);
         UriComponentsBuilder builder = UriComponentsBuilder.fromUriString(url);
         if (params != null) {
-            for (Map.Entry<String, String> entry : params.entrySet()) {
-                builder.queryParam(entry.getKey(), entry.getValue());
-            }
+            params.forEach(builder::queryParam);
         }
-
-        // 创建 HTTP 实体
-        HttpEntity<String> entity = new HttpEntity<>(headers);
-
-        // 发送 GET 请求
-        ResponseEntity<String> response = restTemplate.exchange(
-                builder.toUriString(),
-                HttpMethod.GET,
-                entity,
-                String.class
-        );
-
-        // 将响应体转换为 JSONObject
-        return new JSONObject(response.getBody());
+        return builder.build().toUriString();
     }
 
-    /**
-     * 发送 POST 请求，返回 JSON 数据
-     *
-     * @param url    请求 URL
-     * @param body   请求体（JSON 格式）
-     * @param headers 请求头（可选）
-     * @return JSON 格式的响应数据
-     */
-    public static Object post(String url, JSONObject body, HttpHeaders headers) {
-        // 创建 HTTP 实体
-        HttpEntity<String> entity = new HttpEntity<>(body.toString(), headers);
+    private static String executeRequest(WebClient.RequestHeadersSpec<?> spec) {
+        return spec.retrieve()
+                .bodyToMono(String.class)
+                .block();
+    }
 
-        // 发送 POST 请求
-        ResponseEntity<String> response = restTemplate.exchange(
-                url,
-                HttpMethod.POST,
-                entity,
-                String.class
-        );
-
-        // 将响应体转换为 JSONObject
-        // 获取原始响应数据
-        String rawResponse = response.getBody();
-
-        // 根据响应数据的格式返回相应的类型
+    private static Object parseResponse(String rawResponse) {
         if (rawResponse == null || rawResponse.trim().isEmpty()) {
-            return null; // 空响应
-        } else if (rawResponse.startsWith("{")) {
-            // 解析为 JSONObject
-            return new JSONObject(rawResponse);
-        } else if (rawResponse.startsWith("[")) {
-            // 解析为 JSONArray
-            return new JSONArray(rawResponse);
-        } else {
-            // 返回原始字符串
-            return rawResponse;
+            return null;
+        }
+
+        String trimmed = rawResponse.trim();
+        if (trimmed.startsWith("{")) {
+            return new JSONObject(trimmed);
+        } else if (trimmed.startsWith("[")) {
+            return new JSONArray(trimmed);
+        }
+        return trimmed;
+    }
+
+    private static HttpHeaders initializeHeaders(HttpHeaders headers) {
+        return headers != null ? headers : new HttpHeaders();
+    }
+
+    private static void addHeadersIfPresent(HttpHeaders target, HttpHeaders source) {
+        if (source != null) {
+            target.addAll(source);
         }
     }
 
-    /**
-     * 发送 POST 请求，支持 multipart/form-data 格式
-     *
-     * @param url     请求 URL
-     * @param formData 表单数据（键值对）
-     * @param headers  请求头（可选）
-     * @return JSON 格式的响应数据
-     */
-    public static Object post(String url, Map<String, String> formData, HttpHeaders headers) {
-        // 创建 MultiValueMap 用于存储表单数据
-        MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
-        for (Map.Entry<String, String> entry : formData.entrySet()) {
-            body.add(entry.getKey(), entry.getValue());
-        }
-
-        // 设置请求头为 multipart/form-data
-        if (headers == null) {
-            headers = new HttpHeaders();
-        }
-        headers.setContentType(MediaType.MULTIPART_FORM_DATA);
-
-        // 创建 HTTP 实体
-        HttpEntity<MultiValueMap<String, String>> entity = new HttpEntity<>(body, headers);
-
-        // 发送 POST 请求
-        ResponseEntity<String> response = restTemplate.exchange(
-                url,
-                HttpMethod.POST,
-                entity,
-                String.class
-        );
-
-        // 将响应体转换为 JSONObject 或 JSONArray
-        String rawResponse = response.getBody();
-        if (rawResponse == null || rawResponse.trim().isEmpty()) {
-            return null; // 空响应
-        } else if (rawResponse.startsWith("{")) {
-            return new JSONObject(rawResponse); // 解析为 JSONObject
-        } else if (rawResponse.startsWith("[")) {
-            return new JSONArray(rawResponse); // 解析为 JSONArray
-        } else {
-            return rawResponse; // 返回原始字符串
+    private static void validateUrl(String url) {
+        Objects.requireNonNull(url, "URL 不能为 null");
+        if (url.isBlank()) {
+            throw new IllegalArgumentException("URL 不能为空");
         }
     }
 }
